--- a/src/app/angular-forms/angular-forms.component.html
+++ b/src/app/angular-forms/angular-forms.component.html
@@ -1,1 +1,34 @@
-<p>angular-forms works!</p>
+<div class="example-container">
+  <mat-card class="example-card">
+    <mat-card-header>
+
+      <mat-card-title>Login Form</mat-card-title>
+
+    </mat-card-header>
+
+    <mat-card-content>
+      <div>
+        <form [formGroup]="loginForm" (submit)="submit()">
+          <mat-form-field class="form-field" appearance="outline">
+            <mat-label> E-mail</mat-label>
+            <input matInput formControlName="email" required>
+            <mat-error *ngIf="loginForm.controls.email.touched && loginForm.controls.email.invalid">
+              <span *ngIf="loginForm.controls.email.errors?.required">This field is mandatory.</span>
+              <span *ngIf="loginForm.controls.email.errors?.pattern">Email invalid</span>
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field class="form-field" appearance="outline">
+            <mat-label> Password</mat-label>
+            <input matInput formControlName="password" type="password">
+            <mat-error *ngIf="loginForm.controls.password.touched && loginForm.controls.password.invalid">
+              <span *ngIf="loginForm.controls.password.errors?.required">This field is mandatory.</span>
+            </mat-error>
+          </mat-form-field>
+          <button mat-raised-button color="primary" type="submit">Log In</button>
+        </form>
+      </div>
+    </mat-card-content>
+
+  </mat-card>
+</div>
+
