--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 
 
 <router-outlet></router-outlet>
-<div class="menu"> <app-context-menu class="table"></app-context-menu></div>
+<!-- <div class="menu"> <app-context-menu class="table"></app-context-menu></div> -->
