--- a/src/app/file/file.component.html
+++ b/src/app/file/file.component.html
@@ -1,1 +1,67 @@
-<p>file works!</p>
+<div *ngIf="loading" class="loader-overlay"></div>
+
+<mat-progress-spinner *ngIf="loading" class="loader" mode="indeterminate" diameter="50"></mat-progress-spinner>
+
+<div class="demo-button-container">
+  <button mat-raised-button  color="primary" (click)="openDialog()" class="demo-button">
+    Add row
+  </button>
+  <button
+      mat-raised-button color="primary"
+      [disabled]="!dataSource.length"
+      (click)="removeData()"
+      class="demo-button">
+    Remove row
+  </button>
+</div>
+
+<div *ngIf="!loader"  class="mat-table-container">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
+  <!-- Airlines Column -->
+  <ng-container matColumnDef="Airlines">
+    <th mat-header-cell *matHeaderCellDef>Airlines</th>
+    <td mat-cell *matCellDef="let element">{{element.Airlines}}</td>
+  </ng-container>
+
+  <!-- Departure Column -->
+  <ng-container matColumnDef="Departure">
+    <th mat-header-cell *matHeaderCellDef>Departure</th>
+    <td mat-cell *matCellDef="let element">{{element.Departure}}</td>
+  </ng-container>
+
+  <!-- Arrival Column -->
+  <ng-container matColumnDef="Arrival">
+    <th mat-header-cell *matHeaderCellDef>Arrival</th>
+    <td mat-cell *matCellDef="let element">{{element.Arrival}}</td>
+  </ng-container>
+
+  <!-- Itinerary Column -->
+  <ng-container matColumnDef="Itinerary">
+    <th mat-header-cell *matHeaderCellDef>Itinerary</th>
+    <td mat-cell *matCellDef="let element">{{element.Itinerary}}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+</div>
+
+<ng-template  #dialogTemplate>
+    <div  cdkDrag  cdkDragRootElement=".cdk-dialog-container" class="dialog-container">
+      <h1 class="dialog-header" mat-dialog-title cdkDragHandle>
+        Confirmation
+        <button mat-icon-button (click)="onCancel()" class="close-button">
+          <mat-icon>close</mat-icon>
+        </button>
+      </h1>
+      <mat-dialog-content>
+        <p>Do you want to add a new row?</p>
+      </mat-dialog-content>
+      <mat-dialog-actions class="popup-buttons">
+        <button mat-flat-button color="primary" (click)="onConfirm()">Yes</button>
+        <button mat-flat-button style="background: brown; color: white;" (click)="onCancel()">No</button>
+      </mat-dialog-actions>
+    </div>
+  </ng-template>
+
+  <!-- Skeleton Loading -->
